[gd_scene load_steps=4 format=3 uid="uid://5a8gae12os08"]

[ext_resource type="Texture2D" uid="uid://bu21l4sdpvs6u" path="res://assets/graphic/align/frame.jpg" id="1_8e88f"]
[ext_resource type="Script" path="res://scripts/align.gd" id="1_q6t3x"]
[ext_resource type="PackedScene" uid="uid://knmsxymuw3xi" path="res://scenes/count_down.tscn" id="3_gdmvv"]

[node name="align" type="Node2D"]
script = ExtResource("1_q6t3x")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -888.0
offset_top = -408.0
offset_right = 912.0
offset_bottom = 392.0

[node name="frame" type="Sprite2D" parent="."]
texture = ExtResource("1_8e88f")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="rUp" type="Button" parent="."]
offset_left = 312.0
offset_top = -254.0
offset_right = 560.0
offset_bottom = -54.0
text = "LEFT"

[node name="rDown" type="Button" parent="."]
offset_left = 312.0
offset_top = 5.0
offset_right = 560.0
offset_bottom = 205.0
text = "RIGHT"

[node name="countDown" parent="." instance=ExtResource("3_gdmvv")]
offset_top = 241.0
offset_bottom = 241.0
scale = Vector2(3, 1)

[connection signal="button_down" from="rUp" to="." method="_on_r_up_button_down"]
[connection signal="button_up" from="rUp" to="." method="_on_r_up_button_up"]
[connection signal="button_down" from="rDown" to="." method="_on_r_down_button_down"]
[connection signal="button_up" from="rDown" to="." method="_on_r_down_button_up"]
